[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.39.1", features = ["rt-multi-thread", "macros"] }
sea-orm-migration = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
